@@ -124,7 +124,7 @@ difftime
 _difftime = difftime
 div
 _div = div
-dll_crt0@0
+_dll_crt0@0
 dll_crt0__FP11per_process
 cygwin_dll_init
 dll_dllcrt0
