@@ -1,3 +1,10 @@
+Sat Jul  1 00:24:04 2000  Christopher Faylor <cgf@cygnus.com>
+
+	* dcrt0.cc (_dll_crt0): Renamed from dll_crt0 ().
+	* winsup.h: Accomodate above change.
+	* cygwin.din: Ditto.
+	* lib/cygwin_crt0.c: Ditto.
+
 Fri Jun 30 23:21:40 2000  Christopher Faylor <cgf@cygnus.com>
 
 	* Makefile.in: Use variables rather than configure constructs where
